# sat-moi-app

./: README.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  models.py
backend/app/routers/: moi.py  slew.py
backend/app/services/: inertia.py  slew.py  units.py
backend/tests/: test_inertia.py  test_router.py  test_slew.py  test_slew_simulate.py  test_units.py
frontend/: .env.example  .firebaserc  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  moi.ts  slew.ts
frontend/src/components/: BaseSVPanel.tsx  DeployablesTable.tsx  ManeuverPanel.tsx  ResultsCards.tsx  SlewResultsCards.tsx  SlewSection.tsx  SlewVisualizer.tsx  UnitToggle.tsx  WheelArrayPanel.tsx
frontend/src/types/: moi.ts  slew.ts
